--- a/index.html
+++ b/index.html
@@ -317,43 +317,41 @@
 					</section> -->
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center">
-						<div class="inner medium">
-							<h2>Get in touch</h2>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" value="" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-
+				<section class="wrapper style1 align-center">
+					<div class="inner medium">
+					  <h2>Get in touch</h2>
+					  <form method="post" action="https://formspree.io/f/mrgvjjqo">
+						<div class="fields">
+						  <div class="field half">
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" required />
+						  </div>
+						  <div class="field half">
+							<label for="email">Email</label>
+							<input type="email" name="email" id="email" required />
+						  </div>
+						  <div class="field">
+							<label for="message">Message</label>
+							<textarea name="message" id="message" rows="6" required></textarea>
+						  </div>
 						</div>
-					</section>
+						<input type="hidden" name="_next" value="" />
+						<ul class="actions special">
+						  <li><input type="submit" name="submit" id="submit" value="Send Message" data-error="Please fill out all fields." /></li>
+						</ul>
+					  </form>
+					</div>
+				  </section>
+				  
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/pierry-valcin-529926196/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="valcinpierry13@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy;All rights reserved: <a>Pierry Valcin </a>.</p>
 						</div>
 					</footer>
 
