--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Pierry Valcin Portfolio</title>
@@ -49,7 +45,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Healthcare infrastructure and Covid 19 in Haiti</h2>
-							<p>For this Project, I am an analyst working at a health research company in Haiti.  The government has asked my company to analyze data related to covid-19.  To that end, they have provided me with access to health data. This project higlights my data management skills using python for data cleaning,SQL for data modelling and Power Bi for vizualisation. Picture :(Jeanty Junior Augustin/Reuters)</p>
+							<p>For this Project, I am an analyst working at a health research company in Haiti.  The government has asked my company to provide a report related to covid-19 and health infrastructure in Haiti. To that end, they have provided me with access to health data. This project higlights my data management skills using python for data cleaning,SQL for data modeling and Power BI for vizualisation. Picture :(Jeanty Junior Augustin/Reuters)</p>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/VIP509/SQL-and-Power-BI" class="button">Learn More</a></li>
 							</ul>
@@ -64,7 +60,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Bank loan Dashboard</h2>
-							<p>For this project, I am a Credit analyst working as a consultant for a bank. I was asked to create a Dashboard for the senior management to track their credit portfolio and provide insights. This project showcase my tableau skills.</p>
+							<p>For this project, I am a credit analyst working as a consultant for a bank. I was asked to create a Dashboard for the senior management to track their credit portfolio and provide insights. This project showcase my tableau skills.</p>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/VIP509/Tableau-Mini-Project" class="button">Learn More</a></li>
 							</ul>
